# ros_hand_tracking

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
launch/: hand_tracking.launch  irb120_arwp_g1.launch  roi_camera_calibrated.launch
src/: draw_sequence.py  hand_tracker.py  hand_tracking.py  projection_3d.py  test_standalone.py
